Converted many Lists to Array lists to avoid too much time in get(i) [O(n)!].